--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "dotenv": "^16.3.1",
     "opencage-api-client": "^1.0.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "cross-fetch": "^3.0.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
