--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
     "@picocss/pico": "^1.5.10",
     "@react-google-maps/api": "^2.19.2",
     "animate.css": "^4.1.1",
-    "express": "^4.18.0",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
+    "cross-fetch": "^4.0.0",
     "dotenv": "^16.3.1",
+    "express": "^4.18.0",
     "opencage-api-client": "^1.0.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "cross-fetch": "^3.0.6"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
