--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "opencage-api-client": "^1.0.2"
+  },
+  "scripts": {
+    "start": "node app.js",
+    "dev": "node app.js"
   }
 }
