--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^1.6.0",
     "cors": "^2.8.5",
+    "cross-fetch": "^4.0.0",
     "express": "^4.18.2",
     "opencage-api-client": "^1.0.2"
   },
